--- a/neet/.project
+++ b/neet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>neet</name>
+	<name>MOS</name>
 	<comment></comment>
 	<projects>
 	</projects>
