--- a/neet/pom.xml
+++ b/neet/pom.xml
@@ -55,13 +55,12 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-servlet</artifactId>
             <version>1.18.1</version>
-        </dependency>
+        </dependency>     
 		<dependency>
-			<groupId>com.github.rholder</groupId>
-			<artifactId>snowball-stemmer</artifactId>
-			<version>1.3.0.581.1</version>
-		</dependency>        
-		
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
     </dependencies>   
   <build>
     <sourceDirectory>src</sourceDirectory>
