--- a/neet/.settings/org.eclipse.core.resources.prefs
+++ b/neet/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
-encoding/<project>=UTF-8
+encoding//WebContent/chef.htm=UTF-8
+encoding//WebContent/courier.htm=UTF-8
+encoding//WebContent/customer.htm=UTF-8
 encoding/src=utf8
