--- a/neet/pom.xml
+++ b/neet/pom.xml
@@ -61,6 +61,13 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+   	 		<version>5.1.39</version>
+		</dependency>
+		
     </dependencies>   
   <build>
     <sourceDirectory>src</sourceDirectory>
