--- a/neet/pom.xml
+++ b/neet/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.edu.pku.sei.oo</groupId>
-  <artifactId>neet</artifactId>
+  <artifactId>mos</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 	<dependencies>
@@ -102,7 +102,7 @@
 	        <configuration>
 	          <transformers>
 	            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-	              <mainClass>cn.edu.pku.sei.oo.neet.Service</mainClass>
+	              <mainClass>cn.edu.pku.sei.oo.mos.Service</mainClass>
 	            </transformer>
                 <transformer
                     implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
